--- a/index.html
+++ b/index.html
@@ -2,35 +2,38 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-    <title>تسجيل الدخول</title>
-      <link rel="stylesheet" href="style.css">
-      </head>
-      <body>
-        <div class="background">
-            <!-- الكرات البنفسجية -->
-                <span></span>
-                    <span></span>
-                        <span></span>
-                            <span></span>
-                                <span></span>
-                                  </div>
+  <title>تسجيل الدخول</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- طبقة تأثيرات -->
+  <div class="overlay">
+    <!-- كرات بنفسجية -->
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 
-                                    <div class="circle"></div>
+  <!-- دائرة دوارة -->
+  <div class="circle"></div>
 
-                                      <div class="login-box">
-                                          <h2>تسجيل الدخول</h2>
-                                              <form>
-                                                    <div class="input-box">
-                                                            <input type="email" required>
-                                                                    <label>البريد الإلكتروني</label>
-                                                                          </div>
-                                                                                <div class="input-box">
-                                                                                        <input type="password" required>
-                                                                                                <label>كلمة المرور</label>
-                                                                                                      </div>
-                                                                                                            <button type="submit">دخول</button>
-                                                                                                                  <p class="signup">ليس لديك حساب؟ <a href="#">إنشاء حساب</a></p>
-                                                                                                                      </form>
-                                                                                                                        </div>
-                                                                                                                        </body>
-                                                                                                                        </html>
+  <!-- صندوق تسجيل الدخول -->
+  <div class="login-box">
+    <h2>تسجيل الدخول</h2>
+    <form>
+      <div class="input-box">
+        <input type="email" required>
+        <label>البريد الإلكتروني</label>
+      </div>
+      <div class="input-box">
+        <input type="password" required>
+        <label>كلمة المرور</label>
+      </div>
+      <button type="submit">دخول</button>
+      <p class="signup">ليس لديك حساب؟ <a href="#">إنشاء حساب</a></p>
+    </form>
+  </div>
+</body>
+</html>
